2013-08-27  Roland Levillain  <roland@lrde.epita.fr>

	Remove dead code in Scribo.

	* scribo/afp/components.hh,
	* scribo/estim/components_features.hh,
	* scribo/filter/objects_with_holes.hh,
	* scribo/filter/separators_in_borders.hh,
	* scribo/io/xml/load.hh,
	* scribo/postprocessing/fill_object_holes.hh,
	* scribo/preprocessing/deskew.hh,
	* scribo/primitive/extract/lines_h_thick_and_thin.hh,
	* scribo/primitive/extract/non_text.hh,
	* scribo/primitive/extract/separators_nonvisible.hh,
	* scribo/text/clean_inplace.hh,
	* scribo/text/extract_paragraphs_hdoc.hh,
	* scribo/text/merging.hh:
	Here.

2013-08-27  Roland Levillain  <roland@lrde.epita.fr>

	Display Scribo errors on std::cerr, not std::cout.

	* scribo/scribo/text/merging.hh,
	* scribo/scribo/text/recognition.hh:
	Here.

2013-08-27  Roland Levillain  <roland@lrde.epita.fr>

	Remove Scribo debug code making side effects on streams.

	* scribo/core/line_set.hh,
	* scribo/core/object_groups.hh,
	* scribo/core/paragraph_set.hh,
	* scribo/preprocessing/deskew_crop.hh,
	* scribo/primitive/extract/non_text_kmean.hh:
	Here.

2013-08-26  Roland Levillain  <roland@lrde.epita.fr>

	Improve the generation of Doxyfiles in Scribo.

	* doc/Makefile.am (edit)
	($(srcdir)/user-refman.stamp)
	($(srcdir)/devel-refman.stamp):
	Use `[@]' instead of `\@' for portability reasons.
	(ID): New (empty).
	(edit_devel): Prevent configure from expanding @builddir@.
	Christen the product as ``Developer documentation''.
	($(DOXYFILE_USER), $(DOXYFILE_DEVEL)): Do not depend on $Id$ from
	ChangeLog.
	* doc/Doxyfile.in (PROJECT_NUMBER): Reintegrate @ID@ to the
	project number, even if it is not yet set.

2013-08-22  Roland Levillain  <roland@lrde.epita.fr>

	Slightly improve Scribo's tests/primitive/extract/alignments.cc.

	* tests/primitive/extract/alignments.cc (main): Pass an actual
	literal float as second argument to
	scribo::primitive::extract::alignments.
	Add a Doxygen header.
	Cosmetic changes.
