@@ -1,4 +1,4 @@
-// Copyright (C) 2010 EPITA Research and Development Laboratory (LRDE)
+// Copyright (C) 2010, 2013 EPITA Research and Development Laboratory (LRDE)
 //
 // This file is part of Olena.
 //
@@ -32,10 +32,8 @@
 #include "tests/data.hh"
 
 
-int main(int argc, char *argv[])
+int main()
 {
-  (void) argc;
-  (void) argv;
   using namespace mln;
 
 
